erezept fd nearly working