@@ -15,6 +15,7 @@ import de.gematik.test.tiger.proxy.configuration.ForwardProxyInfo;
 import de.gematik.test.tiger.proxy.configuration.TigerProxyConfiguration;
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.http.HttpHost;
@@ -101,17 +102,14 @@ public class TestTigerProxy {
         assertThat(callCounter.get()).isEqualTo(2);
     }
 
-//    @Test
+    @Test
     public void startProxyFor30s() {
         TigerProxy tp = new TigerProxy(TigerProxyConfiguration.builder()
             .forwardToProxy(new ForwardProxyInfo("192.168.230.85", 3128))
-            .proxyRoutes(Map.of(
-                "https://magog", "https://google.com",
-                "http://magog", "http://google.com"
-            )).build());
+            .proxyRoutes(Collections.emptyMap()).build());
         System.out.println(tp.getBaseUrl() + " with " + tp.getPort());
         try {
-            Thread.sleep(30 * 1_000);
+            Thread.sleep(300 * 1_000);
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
